<?xml version="1.0" encoding="utf-8"?>
<resources>    
    <string name="app_name">QuponMovil</string>    
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="exit">Are you sure you want to exit?</string>
    <string name="success">exito</string>
    <string name="success_edit">Information succesfuly modified</string>
    <string name="logout">Are you sure you want to logout?</string>
    <string name="login_lbl_title">Welcome to Qupon</string>
    <string name="login_lbl_user">Username</string>
    <string name="login_lbl_password">Password</string>
    <string name="login_btn_sign_in">Sign In</string>
    <string name="login_btn_sign_up">Not a member? <u><b><i>Sign Up</i></b></u></string>
    <string name="login_successfully">Successfully logged in</string>
    <string name="signup_lbl_title">Please complete the next form</string>
    <string name="signup_txt_username">Username</string>
    <string name="signup_txt_password">Password</string>
    <string name="signup_txt_repassword">Retype Password</string>
    <string name="signup_txt_first_name">First name</string>
    <string name="signup_txt_last_name">Last name</string>
    <string name="signup_txt_zip_code">Zip code</string>
    <string name="signup_txt_phone_number">Phone number</string>
    <string name="signup_spn_gender">Choose a gender</string>
    <string name="signup_txt_email">Email</string>
    <string name="signup_btn_sel_birthday">Birthday</string>
	<string name="signup_btn_register">Send</string>
	<string name="signup_error_msg_complete_user">Please complete user name</string>
	<string name="signup_error_msg_unmatching_pass">The two passwords don\'t match</string>
    <string name="signup_error_msg_complete_first_name">Please input your first name</string>
    <string name="signup_error_msg_complete_last_name">Please input your last name</string>    
    <string name="promotion_detail_lbl_special_price_title">Special Price</string>
    <string name="promotion_detail_lbl_discount_title">You save</string>
    <string name="promotion_detail_lbl_to_date_title">To date</string>
    <string name="promotion_detail_lbl_quantity_remaining_title">Remaining</string>
    <string name="promotion_detail_lbl_terms_cond_title">Terms and conditions:</string>
    <string name="promotion_detail_lbl_description_title">Description:</string>
    <string name="promotion_detail_lbl_tag_names_title">Tag list:</string>    
    <string name="promotion_detail_lbl_from_date_title">From date:</string>    
    <string name="promotion_detail_lbl_state_title">State of promotion:</string>
    <string name="promotion_btn_generate_coupon">GENERATE</string>    
    <string name="settings_lbl_account">Account</string>
    <string name="settings_lbl_modify_info_user">Modify user</string>
    <string name="settings_lbl_modify_info_user_summary">Change your account information</string>
    <string name="coupon_detail_lbl_code">Code:</string>
    <string name="coupon_adapter_generation_date">Generation date:</string>
    <string name="discount">Off</string>
    <string name="menu_login">Login</string>    
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>
    <string name="tab_promotions">Promotions</string>
    <string name="tab_promotions_proximity">Promotions proximity</string>
    <string name="tab_coupons">Coupons</string>
    <string name="exception_no_network">Couldn\'t find an Internet connection</string>
    <string name="must_be_logged">Must be logged in in order to proceed</string>
</resources>