<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#771E9BED">

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="match_parent" android:fillViewport="true" android:layout_gravity="center" android:layout_marginBottom="30dip" android:layout_marginLeft="30dip" android:layout_marginTop="30dip">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" android:layout_marginRight="30dip">

            <TextView
                android:id="@+id/signup_lbl_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/signup_lbl_title"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/signup_txt_user"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:hint="@string/signup_txt_user" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/signup_txt_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:hint="@string/signup_txt_password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/signup_txt_repassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/signup_txt_repassword"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/signup_txt_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:hint="@string/signup_txt_name" />

            <EditText
                android:id="@+id/signup_txt_last_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:hint="@string/signup_txt_last_name" />

            <EditText
                android:id="@+id/signup_txt_zip_code"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:hint="@string/signup_txt_zip_code" />

            <EditText
                android:id="@+id/signup_txt_phone_number"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:hint="@string/signup_txt_phone_number" />

            <Spinner
                android:id="@+id/signup_spn_gender"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:prompt="@string/signup_spn_gender"/>
            
            <EditText
                android:id="@+id/signup_txt_email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:hint="@string/signup_txt_email" />

            <Button
                android:id="@+id/signup_btn_sign_up"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:text="@string/signup_btn_register" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>